--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,12 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+.container{
+  margin-top:50px;
+}
+input{
+  margin: 10px 0;
+}
+.list-group{
+  margin-top:20px;
+}
