--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,18 @@ input{
 .list-group{
   margin-top:20px;
 }
+
+
+.categories-container .list-group-item{
+  min-height: 35px;
+}
+.categories-container .task-name{
+  height: 34px;
+  line-height: 34px;
+}
+.btn-input-container input {
+  width:90%;
+}
+.btn-input-container button{
+  margin-top:10px;
+}
