--- a/src/App.css
+++ b/src/App.css
@@ -42,10 +42,21 @@ input{
 
 .categories-container .list-group-item{
   min-height: 35px;
+  cursor: pointer;
+}
+.categories-container .list-group-item:hover{
+  background-color: #f5f5f5;
+}
+.categories-container .list-group-item.selected{
+    background-color: #f5f5f5;
 }
 .categories-container .task-name{
   height: 34px;
   line-height: 34px;
+}
+.categories-container .selecter .task-name,
+.categories-container .task-name:hover{
+  text-decoration: underline;
 }
 .btn-input-container input {
   width:90%;
