--- a/src/App.css
+++ b/src/App.css
@@ -37,17 +37,31 @@ input{
 .list-group{
   margin-top:20px;
 }
+ul{
+  padding-left: 0;
+}
+ul li{
+  list-style:none;
+}
 
-
-
-.categories-container .list-group-item{
+.main-category-list{
+  border: 2px solid #c9c9c9;
+  padding: 20px;
+  border-radius: 6px;
+}
+.categories-container .list-item {
   min-height: 35px;
+  padding:8px 10px;
+  background: #eeeeee;
   cursor: pointer;
+  margin-bottom:15px;
+  border-radius:6px;
+  border:2px solid #c7c7c7;
 }
-.categories-container .list-group-item:hover{
-  background-color: #f5f5f5;
+.categories-container .list-item :hover{
+  /*background-color: #f5f5f5;*/
 }
-.categories-container .list-group-item.selected{
+.categories-container .list-item .selected{
     background-color: #f5f5f5;
 }
 .categories-container .task-name{
@@ -60,6 +74,9 @@ input{
 }
 .btn-input-container input {
   width:90%;
+}
+.sub-menu{
+  margin-left:20px;
 }
 .tasksList-container .btn-input-container input {
   width:82%;
