--- a/src/components/App.css
+++ b/src/components/App.css
@@ -61,8 +61,8 @@ ul li{
 .categories-container .list-item :hover{
   /*background-color: #f5f5f5;*/
 }
-.categories-container .list-item .selected{
-    background-color: #f5f5f5;
+.categories-container .list-item.selected{
+    background-color:#cbcbcb;
 }
 .categories-container .task-name{
   height: 34px;
