--- a/src/components/App.css
+++ b/src/components/App.css
@@ -58,6 +58,9 @@ ul li{
   border-radius:6px;
   border:2px solid #c7c7c7;
 }
+.main-category-list ul{
+  margin-left:20px;
+}
 .categories-container .list-item :hover{
   /*background-color: #f5f5f5;*/
 }
